fix large calendar gap

--- a/src/components/shared/calendar/Calendar.css
+++ b/src/components/shared/calendar/Calendar.css
@@ -17,7 +17,7 @@
 }
 
 .react-calendar__month-view__days {
-  gap: 8px 14.6px;
+  gap: 8px 14.86px;
   place-content: flex-end;
 }
 
